fix: attribute collapse

--- a/src/modules/featureInfo/components/featureInfoIframePanel/featureInfoIframePanel.css
+++ b/src/modules/featureInfo/components/featureInfoIframePanel/featureInfoIframePanel.css
@@ -261,3 +261,52 @@ a[href^='https://geodaten.bayern.de/odd/']:hover {
 	opacity: 1;
 	text-decoration: none;
 }
+
+.icon-rotate-90 {
+	-moz-transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+	transition: all var(--animation-duration-large-open) var(--animation-easing-open);
+}
+.iconexpand {
+	-moz-transform: rotate(270deg);
+	-webkit-transform: rotate(270deg);
+	transform: rotate(270deg);
+}
+.prop-header {
+	margin-top: 0.5em;
+}
+.prop-header:hover {
+	background: none;
+}
+.prop-header .icon {
+	background: var(--primary-color);
+	-webkit-mask-repeat: no-repeat;
+	cursor: pointer;
+	display: inline-block;
+	height: 1em;
+	width: 0.625em;
+}
+.prop-header .ba-list-item__text.ba-list-item__primary-text {
+	color: var(--text2);
+	padding: 0.5em 0;
+}
+.prop-header .ba-list-item__after {
+	padding: 0.5em 0.4em 0 0.5em;
+}
+.chevron {
+	transform: rotate(270deg);
+}
+.prop-header .chevron {
+	display: block;
+	position: relative;
+	mask: url('../../../../assets/icons/chevron-right.svg');
+	-webkit-mask-image: url('../../../../assets/icons/chevron-right.svg');
+	mask-image: url('../../../../assets/icons/chevron-right.svg');
+}
+.propshide .chevron {
+	transform: rotate(90deg);
+}
+.propshide + table {
+	display: none;
+}
